design chanched, added a few feature

--- a/style/standard.css
+++ b/style/standard.css
@@ -6,6 +6,7 @@
 :root {
     --globalBlue: #2A3647;
     --GlobalWhite: #FFFFFF;
+    --GlobalBackgroundWhite: #F6F7F8;
     --GlobalLightBlue: #29ABE2;
     --GlobalDarkblue: #091931;
     --CircleBadgeGray: #0C2E621F;
