--- a/style/board.css
+++ b/style/board.css
@@ -1,29 +1,61 @@
- 
- .addTaskContainer {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
+body{
+    background-color: var( --GlobalBackgroundWhite);
+}
+.addTaskContainer {
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
  }
 
- .tableCategories td{
-    display: flex;
-    justify-content: space-between;
+ .addTaskContainer h1{
+    font-size: 73px;
+ }
+
+ .gap32px {
+     gap: 32px;
+ }
+
+ .searchBar {
+     display: flex;
+     box-sizing: border-box;
+     border: 1px solid #A8A8A8;
+     border-radius: 10px;
+     background-color: var(--GlobalWhite);
+     padding: 8px 16px 8px 16px;
+     width: 312px;
+ }
+
+ .searchBar input {
+     border: none;
+     background-color: transparent;
+     font-size: 24px;
+     width: 230px;
+ }
+
+ .tableCategories td {
+     display: flex;
+     justify-content: space-between;
+     color: #42526E;
+     font-weight: 700;
+     font-size: 20px;
+     padding-right: 25px;
  }
 
  .tablecontainer {
-     margin-top: 100px;
+     margin-top: 20px;
      display: flex;
      align-items: center;
      justify-content: center;
  }
 
- table,
+ /* table,
  td {
      border: 1px solid black; 
- }
+ } */
 
  table {
      border-collapse: collapse;
+     max-width: 1100px;
  }
 
  tr {
@@ -34,20 +66,44 @@
      display: flex;
      flex-wrap: wrap;
      align-content: flex-start;
-     gap: 3px;
-     /* height: 400px; */
+     gap: 5px;
      width: 100%;
  }
 
  td div {
-     height: 100px;
-     width: 100px;
+     height: 215px;
+     width: 252px;
      border: 2px solid black;
+     border-radius: 24px;
      margin-top: 5px;
-     margin-left: 5px;
      text-align: center;
+ }
+
+ .tableCategories button{
+    background-color: transparent;
+    font-size: 20px;
+    border: 2px solid var( --globalBlue);
+    border-radius: 8px;
+    color: var( --globalBlue);
+ }
+
+ .tableCategories button:hover{
+    border: 2px solid var(--GlobalLightBlue);
+    color: var(--GlobalLightBlue);
+    cursor: pointer;
  }
 
  .highlight {
      background-color: rgb(187, 187, 187);
+ }
+
+ .noTaskField{
+    border-radius: 10px !important;
+    border: 1px dotted #A8A8A8 !important;
+    height: 48px !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+    background-color: #E7E7E7 !important;
+    color: #A8A8A8;
  }
