feat(sidebar): Update sidebar to v1.1 with Figma design specifications
- Implement exact Figma design layout and styling
- Fix icon colors and sizing (30x30px, #CDCDCD for inactive)
- Adjust spacing and gaps according to design specs
- Implement inline SVG loading for proper currentColor support
- Update navigation item dimensions and padding
- Ensure consistent visual hierarchy matching Figma mockup

Version: Sidebar v1.1

--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -7,25 +7,25 @@
   <nav class="nav">
     <a class="nav-item" href="./summary.html" data-page="summary">
       <span class="nav-icon">
-        <img src="./assets/img/summary.svg" alt="Summary">
+        <img data-inline-svg src="./assets/img/summary.svg" alt="">
       </span>
       <span>Summary</span>
     </a>
     <a class="nav-item" href="./add_task.html" data-page="add_task">
       <span class="nav-icon">
-        <img src="./assets/img/addtask.png" alt="Add Task">
+        <img data-inline-svg src="./assets/img/addtask.svg" alt="">
       </span>
       <span>Add Task</span>
     </a>
     <a class="nav-item" href="./board.html" data-page="board">
       <span class="nav-icon">
-        <img src="./assets/img/board.png" alt="Board">
+        <img data-inline-svg src="./assets/img/board.svg" alt="">
       </span>
       <span>Board</span>
     </a>
     <a class="nav-item" href="./contacts.html" data-page="contacts">
       <span class="nav-icon">
-        <img src="./assets/img/contacts.svg" alt="Contacts">
+        <img data-inline-svg src="./assets/img/contacts.svg" alt="">
       </span>
       <span>Contacts</span>
     </a>
