--- a/style/board.css
+++ b/style/board.css
@@ -1,3 +1,7 @@
+:root{
+    --boardWith: 1100px;
+}
+
 body{
     background-color: var( --GlobalBackgroundWhite);
 }
@@ -18,7 +22,7 @@ body{
  .searchBar {
      display: flex;
      box-sizing: border-box;
-     border: 1px solid #A8A8A8;
+     border: 1px solid var(--GlobalBorderColorGray);
      border-radius: 10px;
      background-color: var(--GlobalWhite);
      padding: 8px 16px 8px 16px;
@@ -48,18 +52,18 @@ body{
      justify-content: center;
  }
 
- /* table,
- td {
-     border: 1px solid black; 
- } */
-
  table {
      border-collapse: collapse;
-     max-width: 1100px;
+     width: var(--boardWith);
  }
 
  tr {
      display: flex;
+     height: 430px;
+ }
+
+ .tableCategories{
+    height: unset !important;
  }
 
  td {
@@ -82,9 +86,9 @@ body{
  .tableCategories button{
     background-color: transparent;
     font-size: 20px;
-    border: 2px solid var( --globalBlue);
+    border: 2px solid var( --GlobalBlue);
     border-radius: 8px;
-    color: var( --globalBlue);
+    color: var( --GlobalBlue);
  }
 
  .tableCategories button:hover{
@@ -93,17 +97,36 @@ body{
     cursor: pointer;
  }
 
- .highlight {
-     background-color: rgb(187, 187, 187);
+ .highlightTask {
+     height: 215px;
+     width: 252px;
+     border: 1px dotted var(--GlobalBorderColorGray);
+     border-radius: 30px;
+     margin-top: 5px;
  }
 
  .noTaskField{
     border-radius: 10px !important;
-    border: 1px dotted #A8A8A8 !important;
+    border: 1px dotted var(--GlobalBorderColorGray) !important;
     height: 48px !important;
     display: flex !important;
     align-items: center !important;
     justify-content: center !important;
     background-color: #E7E7E7 !important;
-    color: #A8A8A8;
+    color: var(--GlobalBorderColorGray)!important;
+ }
+
+ .rotate5deg{
+    transform: rotate(5deg);
+ }
+
+ .noTaskFound{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: var(--boardWith);
+ }
+
+ .displayNone{
+    display: none !important;
  }
