--- a/style/sidebar.css
+++ b/style/sidebar.css
@@ -5,8 +5,8 @@
 }
 
 .sidebar {
-  width: 232px;
-  background: #2A3647;
+  width: var(--sidebar-w);
+  background: var(--globalBlue);
   box-shadow: 0 0 4px rgba(0,0,0,0.1);
   display: flex;
   flex-direction: column;
@@ -16,7 +16,7 @@
   left: 0;
   top: 0;
   height: 100vh;
-  z-index: 1000;
+  z-index: 1000;                /* UNTER Header */
   transition: transform 0.3s ease;
 }
 
